CVE and SSVC updates, ADP pilot updates
- Populate vulnerability information from CVE entry.
- Many bug fixes for editing vuls/status.
- Populate ADP container.
- publish ssvc info in adp container.
- Allow editing of CVE CNA container.
- Allow user to see differences between current and proposed cna container.
- rework actions on vul add form

--- a/assets/css/casethread.css
+++ b/assets/css/casethread.css
@@ -1,4 +1,16 @@
+.border-danger {
+    border-style: dashed !important;
+}
 
+.dropdown-toggle-after .dropdown-toggle::after{
+    display: inline-block;
+}
+
+.card-grid-wrapper .col {
+    display: flex;
+    justify-content:space-between;
+    align-items: stretch;
+}
 
 .card-wrapper {
     display: flex;
